<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".SettingsActivity">

    <Button
        android:id="@+id/buttonDeleteData"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="#A50707"
        android:text="@string/delete_data"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="110dp"
        android:text="@string/language"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSettingsTitle" />

    <TextView
        android:id="@+id/textViewSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/settings"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="66dp"
        app:layout_constraintStart_toEndOf="@+id/textViewLanguage"
        app:layout_constraintTop_toBottomOf="@+id/textViewSettingsTitle">

        <RadioButton
            android:id="@+id/radioButtonEnglish"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:buttonTint="#FFFFFF"
            android:text="@string/english"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="italic" />

        <RadioButton
            android:id="@+id/radioButtonFrench"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:buttonTint="#FFFFFF"
            android:text="@string/french"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="italic" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>